# Multimodal-Document-Intelligence-for-Contracts-and-Invoices

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  description.md  problemstilling.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
migrations/: env.py
migrations/versions/: 0001_initial_empty.py  0002_add_documents.py
scripts/: check_db.py  verify_env.py
src/app/: __init__.py  main.py
src/app/api/: router.py
src/app/api/routes/: documents.py  health.py
src/app/core/: config.py
src/app/db/: base.py  models.py  session.py
src/app/domain/: __init__.py  documents.py
src/app/storage/: __init__.py  service.py
src/app/worker/: celery_app.py  enqueue.py  tasks.py
tests/: conftest.py  test_config.py  test_db_session.py  test_documents.py  test_health.py  test_jobs.py  test_migrations.py  test_storage.py  test_worker.py
